<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/styletitre"
        android:text="@string/titremenu"/>

    <Button
        style="@style/menubtn"
        android:text="@string/menu1"
        android:id="@+id/b1"
        android:onClick="acces"/>

    <Button
        style="@style/menubtn"
        android:text="@string/menu2"
        android:id="@+id/b2"
        android:onClick="acces"/>

    <Button
        style="@style/menubtn"
        android:text="@string/menu3"
        android:id="@+id/b3"
        android:onClick="acces"/>

    <Button
        style="@style/menubtn"
        android:text="@string/menu4"
        android:id="@+id/b4"
        android:onClick="acces"/>

</LinearLayout>